--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <script type="text/javascript" src="nightModeScript.js"></script>
-    <link rel="stylesheet" type="text/css" href="/myStyle.css">
+    <script type="text/javascript" src="/javascript/nightModeScript.js"></script>
+    <link rel="stylesheet" type="text/css" href="/myStyles/myStyle.css">
 
 </head>
 
@@ -65,7 +65,7 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="card border-dark">
-                    <img class="card-img-top" src="ME.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="/images/ME.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Mike Byun</h5>
                         <p class="card-text">Hi! My name is Mike and I'm a Computer Science Undergraduate from
@@ -77,7 +77,7 @@
             <a href="https://github.com/mike107/NTFS-View-Deleted-Files" class="custom-card">
                 <div class="col-sm-6">
                     <div class="card border-dark">
-                        <img class="card-img-top" src="NTFSDeletedFiles.png" alt="Card image cap">
+                        <img class="card-img-top" src="/images/NTFSDeletedFiles.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">NTFS Deleted Files</h5>
                             <p class="card-text">This was a group project where we showed list of deleted files in NTFS
@@ -90,7 +90,7 @@
             <a href="https://github.com/mike107/CSC301-Group-Project" class="custom-card">
                 <div class="col-sm-6">
                     <div class="card mt-4">
-                        <img class="card-img-top" src="AttendaceApp_1.png" alt="Card image cap">
+                        <img class="card-img-top" src="/images/AttendaceApp_1.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">NTFS Deleted Files</h5>
                             <p class="card-text">This was a group project where we showed list of deleted files in NTFS
