--- a/snake.html
+++ b/snake.html
@@ -12,8 +12,8 @@
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	 crossorigin="anonymous">
-	<script type="text/javascript" src="nightModeScript.js"></script>
-	<link rel="stylesheet" type="text/css" href="myStyle.css">
+	<script type="text/javascript" src="/javascript/nightModeScript.js"></script>
+	<link rel="stylesheet" type="text/css" href="/myStyles/myStyle.css">
 
 </head>
 
