got rid of needless test files and fixed and implemented 1 narbar file for all pages
Also changed the look of index.html so that i contains my resume

--- a/index.html
+++ b/index.html
@@ -12,61 +12,25 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="/javascript/nightModeScript.js"></script>
-    <link rel="stylesheet" type="text/css" href="/myStyles/myStyle.css">
+    <script type="text/javascript" src="javascript/nightModeScript.js"></script>
+    <link rel="stylesheet" type="text/css" href="myStyles/myStyle.css">
 </head>
 
 <body>
+    <header>
         <div id="include"></div>
-        <script type="text/javascript" src=testScript.js>
+        <script type="text/javascript" src=javascript/nav.js>
         </script>
-<!--
+    </header>
     <section>
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="card border-dark">
-                    <img class="card-img-top" src="/images/ME.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Mike Byun</h5>
-                        <p class="card-text">Hi! My name is Mike and I'm a Computer Science Undergraduate from
-                            University of Toronto.
-                            This is my portfolio website that contains schools projects and my own projects.</p>
-                    </div>
-                </div>
-            </div>
-            <a href="https://github.com/mike107/NTFS-View-Deleted-Files" class="custom-card">
-                <div class="col-sm-6">
-                    <div class="card border-dark">
-                        <img class="card-img-top" src="/images/NTFSDeletedFiles.png" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">NTFS Deleted Files</h5>
-                            <p class="card-text">This was a group project where we showed list of deleted files in NTFS
-                                System using Free to use API. </p>
-                        </div>
-                    </div>
-            </a>
+        <div id = "resume">
+            <embed src="files/Michael Byun - Resume.pdf" width="800px" height="1170px" />
         </div>
-        <div class="row">
-            <a href="https://github.com/mike107/CSC301-Group-Project" class="custom-card">
-                <div class="col-sm-6">
-                    <div class="card mt-4">
-                        <img class="card-img-top" src="/images/AttendaceApp_1.png" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">NTFS Deleted Files</h5>
-                            <p class="card-text">This was a group project where we showed list of deleted files in NTFS
-                                System using Free to use API. </p>
-                        </div>
-                    </div>
-            </a>
-        </div>
-        </div>
-    </section>-->
+    </section>
     <!-- got this switch from proto.io/freebies/onoff-->
-
 </body>
 
 </html>
