made changes to my javascript path and style path so that the result shows up offline as well

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="javascript/nightModeScript.js"></script>
-    <link rel="stylesheet" type="text/css" href="myStyles/myStyle.css">
+    <script type="text/javascript" src="/mike107.github.io/javascript/nightModeScript.js"></script>
+    <link rel="stylesheet" type="text/css" href="/mike107.github.io/myStyles/myStyle.css">
 </head>
 
 <body>
     <header>
         <div id="include"></div>
-        <script type="text/javascript" src=javascript/nav.js>
+        <script type="text/javascript" src=/mike107.github.io/javascript/nav.js>
         </script>
     </header>
     <section>
