updated nav.html for school link to go to school.html

--- a/nav.html
+++ b/nav.html
@@ -13,7 +13,7 @@
                 <a class="nav-link" href="#">Unity Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">School Projects</a>
+                <a class="nav-link" href="school.html">School Projects</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
